--- a/css/flexlayouts.css
+++ b/css/flexlayouts.css
@@ -6,20 +6,36 @@ ul li {
     line-height: 40px;
 }
 
+body {
+    background-color: rgb(251, 251, 251);
+}
+
+.main-container {
+    border-radius: 25px;
+    margin: auto;
+    height: auto;
+    display: flex;
+    flex-direction: column;
+    width: 75%;
+    align-content: center;
+    background-color: rgba(50, 50, 50, .3);
+}
+
 html {
     font-size: 1.5em;
     font-family: 'Noto Sans JP', sans-serif;
 }
 
 form {
-    background-color: rgba(250, 250, 250, .5);
-    width: 100px;
+    /* background-color: rgba(250, 250, 250, .5); */
+    /* width: 100px; */
     padding: 20px;
     margin: 25px;
 }
 
 h3 {
     font-weight: lighter;
+    text-decoration: underline;
 }
 
 form label {
@@ -96,8 +112,14 @@ div h2 {
     display: flex;
     flex-basis: 80%;
     justify-content: center;
-    border: 2px ridge black;
+    border: 1px dott black;
     border-radius: 20px;
+}
+
+.div-container-item {
+    border: 2px dotted black;
+    padding: 25px;
+    border-radius: 25px;
 }
 
 .div-container-item-1 {
@@ -123,7 +145,7 @@ div h2 {
 .grid-container {
     display: grid;
     grid-template-columns: auto auto auto;
-    border: 2px solid black;
+    border: 1px dotted rgba(40, 40, 40, .2);
 }
 
 .photo-item {
