--- a/css/flexlayouts.css
+++ b/css/flexlayouts.css
@@ -8,15 +8,17 @@ ul li {
 
 body {
     background-color: rgb(251, 251, 251);
+    height: 100vh;
+    width: 100vw;
 }
 
 .main-container {
     border-radius: 25px;
     margin: auto;
-    height: auto;
     display: flex;
     flex-direction: column;
     width: 75%;
+    height: 100%;
     align-content: center;
     background-color: rgba(50, 50, 50, .3);
 }
@@ -103,8 +105,9 @@ div h2 {
 }
 
 .button-container {
-    display: flex;
+    display: inline-flex;
     flex-basis: 80%;
+    max-height: 105px;
     justify-content: center;
 }
 
@@ -112,12 +115,12 @@ div h2 {
     display: flex;
     flex-basis: 80%;
     justify-content: center;
-    border: 1px dott black;
-    border-radius: 20px;
+    border-top: 1px solid black;
+    /* border-radius: 20px; */
 }
 
 .div-container-item {
-    border: 2px dotted black;
+    /* border: 2px dotted black; */
     padding: 25px;
     border-radius: 25px;
 }
